# ses_minproject_breifer

./: CMakeLists.txt  README.md
src/: briefer.c  briefer_gpio.c  briefer_gpio.h  briefer_lcd.c  briefer_lcd.h  makefile
